--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
-
+.holder{
+	display: flex;
+	/*align-items: center;*/
+	justify-content:space-evenly;
+	flex-wrap:wrap;
+}
+.box{
+	width:100px;
+	height:100px;
+	background:green;
+}
+.box-2{
+	background:red;
+}
+.box-3{
+	background:blue;
+}
 /* Your CSS Code here. */
